force-app/main/default/objects/uiRouteAction__c/uiRouteAction__c.object-meta.xml
<CustomObject>
    <label>UI Route Action</label>
    <nameField>
        <label>Route Api Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UI Route Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>