force-app/main/default/objects/uiRouteAction__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only Active will be displayed</description>
    <inlineHelpText>Only Active will be displayed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>