force-app/main/default/objects/uiRouteAction__c/fields/ContextIdField__c.field-meta.xml
<CustomField>
    <fullName>ContextIdField__c</fullName>
    <defaultValue>&#39;Id&#39;</defaultValue>
    <description>Which Field to use from current Context Object as a Context Id</description>
    <inlineHelpText>Which Field to use from current Context Object as a Context Id</inlineHelpText>
    <label>ContextId Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>