force-app/main/default/objects/uiRouteAction__c/fields/FilterName__c.field-meta.xml
<CustomField>
    <fullName>FilterName__c</fullName>
    <defaultValue>&#39;Recent&#39;</defaultValue>
    <description>The ListView Name</description>
    <inlineHelpText>The ListView Name</inlineHelpText>
    <label>Filter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>