force-app/main/default/objects/uiRouteAction__c/fields/IsNavigation__c.field-meta.xml
<CustomField>
    <fullName>IsNavigation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will enable navigation between app pages</description>
    <inlineHelpText>Will enable navigation between app pages</inlineHelpText>
    <label>Navigation Enabled</label>
    <type>Checkbox</type>
</CustomField>