force-app/main/default/objects/uiRouteAction__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The displayed Label on component</description>
    <inlineHelpText>The displayed Label on component</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>