force-app/main/default/objects/uiRouteAction__c/fields/LightningIcon__c.field-meta.xml
<CustomField>
    <fullName>LightningIcon__c</fullName>
    <defaultValue>&#39;standard:account&#39;</defaultValue>
    <description>select SLDS Icon to display</description>
    <inlineHelpText>select SLDS Icon to display</inlineHelpText>
    <label>Lightning Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>