force-app/main/default/objects/uiRouteAction__c/fields/MergedParameters__c.field-meta.xml
<CustomField>
    <fullName>MergedParameters__c</fullName>
    <description>The %String% will be replaced with Merged Values from Context Object</description>
    <inlineHelpText>The %String% will be replaced with Merged Values from Context Object</inlineHelpText>
    <label>Merged Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>