force-app/main/default/objects/uiRouteAction__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>view</fullName>
                <default>true</default>
                <label>view</label>
            </value>
            <value>
                <fullName>edit</fullName>
            </value>
            <value>
                <fullName>clone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>