force-app/main/default/objects/uiRouteAction__c/fields/NavigationType__c.field-meta.xml
<CustomField>
    <fullName>NavigationType__c</fullName>
    <description>The Type of Navigation from component</description>
    <inlineHelpText>The Type of Navigation from component</inlineHelpText>
    <label>Navigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WebPage</fullName>
                <default>true</default>
                <label>Web Page</label>
            </value>
            <value>
                <fullName>ListView</fullName>
                <label>List View</label>
            </value>
            <value>
                <fullName>RecordHome</fullName>
                <label>Record Home</label>
            </value>
            <value>
                <fullName>LightningPage</fullName>
                <label>Lightning Page</label>
            </value>
            <value>
                <fullName>RelatedList</fullName>
                <label>Related List</label>
            </value>
            <value>
                <fullName>RecordPage</fullName>
                <label>Record Page</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>