force-app/main/default/objects/uiRouteAction__c/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>The Target sObject for Navigation or Context Object when a Related List</description>
    <inlineHelpText>The Target sObject for Navigation or Context Object when a Related List</inlineHelpText>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>uiRouteAction__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>