force-app/main/default/objects/uiRouteAction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The Order of display</description>
    <inlineHelpText>The Order of display</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>