force-app/main/default/objects/uiRouteAction__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>Visualforce or Component Name</description>
    <inlineHelpText>Visualforce or Component Name</inlineHelpText>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>