force-app/main/default/objects/uiRouteAction__c/fields/RelationshipApiName__c.field-meta.xml
<CustomField>
    <fullName>RelationshipApiName__c</fullName>
    <description>The RelationshipName of The Related List</description>
    <inlineHelpText>The RelationshipName of The Related List</inlineHelpText>
    <label>Relationship Api Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contacts</fullName>
            </value>
            <value>
                <fullName>ChildAccounts</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>CombinedAttachments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>