force-app/main/default/objects/uiRouteAction__c/fields/RouteCode__c.field-meta.xml
<CustomField>
    <fullName>RouteCode__c</fullName>
    <externalId>true</externalId>
    <label>RouteCode</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>