force-app/main/default/objects/uiRouteAction__c/fields/TargetURL__c.field-meta.xml
<CustomField>
    <fullName>TargetURL__c</fullName>
    <description>The webpage URL of the page you are navigating to.</description>
    <inlineHelpText>The webpage URL of the page you are navigating to.</inlineHelpText>
    <label>TargetURL</label>
    <type>TextArea</type>
</CustomField>