force-app/main/default/objects/uiRouteAction__c/fields/uiScreenId__c.field-meta.xml
<CustomField>
    <fullName>uiScreenId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Screen that will be displayed when clicked</description>
    <inlineHelpText>The Screen that will be displayed when clicked</inlineHelpText>
    <label>UI Screen</label>
    <referenceTo>uiScreen__c</referenceTo>
    <relationshipLabel>UI Route Actions</relationshipLabel>
    <relationshipName>RouteActions</relationshipName>
    <type>Lookup</type>
</CustomField>