force-app/main/default/objects/uiRouteAction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>uiScreenId__c</columns>
    <columns>Group__c</columns>
    <columns>MergedParameters__c</columns>
    <columns>NavigationType__c</columns>
    <columns>ObjectApiName__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>